--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     <div class="con2" id="about-sec">
         <div class="info" data-aos="fade-up">
             <h5>Name :Shubham</h5>
-            <h5>Job : Graphook designer</h5>
+            <h5>Job : Graphice designer</h5>
             <h5>Address: Gurdaspur</h5>
             <h5>Skills:</h5>
             <ul type="none">
