--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
         <div class="op">
             <div>
                 <h3>Email</h3>
-                <p>hauhauahxua@gmail.com</p>
+                <p>hehe@gmail.com</p>
             </div>
         </div>
         <div class="op">
